test/domains/compilerErrors/initDomainWithNonDomain-nongeneric.compopts
-sversion=1
-sversion=2  # initDomainWithNonDomain-nongeneric-range.good

