test/domains/compilerErrors/initDomainWithNonDomain-nongeneric.good
initDomainWithNonDomain-nongeneric.chpl:4: error: assigning real(64) to a rectangular domain
